Tue Dec  2 01:19:31 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gnubgmodule.c, gnubgmodule.h: Py_SetProgramname should be
	parsed argv[0];
	* gtkboard.c: init bd->turn to avoid a warning from valgrind
	* gtktheory.c: small memory leak caused by missing g_objec_unref

Mon Dec  1 23:07:43 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtktempmap.c: make "show equities" more readable

Sun Sep 29 19:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, flags/spain.png: add a spanish flag

Mon Nov 24 17:07:00 CET 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, po/es.po: add es translation

Sat Nov 15 23:32:42 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubgstock.c, gnubgstock.h, gtkgame.c, gtktoolbar.c,
	pixmaps/Makefile.am, pixmaps/gnubg-stock-pixbufs.h,
	pixmaps/16x16/actions/resign_16.png,
	pixmaps/24x24/actions/hint_16.png,
	pixmaps/24x24/actions/resign_24.png, xpm/resign.xpm: Make a stock item
	of the resign xpm

Tue Nov 11 23:39:30 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkboard.c, gtkboard.h: fix two minor bugs causing crashes
	on closing

Tue Nov 11 11:59:52 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, eval.c, eval.h, play.c: Evaluate accept resign at
	2ply. Const a few evalcontext's.

Mon Nov 10 23:39:32 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: fix a bug in LegalDestPoints when skipping pips during
	bearoff

Mon Nov 10 00:18:25 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: add notidy flag to the bearoff database creation window

Mon Nov 10 00:10:06 CET 2008 Christian Anthon <anthon@kiku.dk>

	* makebearoff.c: delete special win32 code

Sat Nov  1 14:31:07 CET 2008 Christian Anthon <anthon@kiku.dk>

	* dbprovider.c, dbprovider.h, gnubg.c: fix minor compile problems with
	and without python

Fri Oct 24 17:07:03 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* dbprovider.c, dbprovider.h, gnubg.c, gnubgmodule.c, gnubgmodule.h,