@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gtkgame.c,v 1.732 2008/11/30 21:37:21 Superfly_Jon Exp $
+ * $Id: gtkgame.c,v 1.733 2008/12/03 10:59:57 c_anthon Exp $
  */
 
 #include "config.h"
@@ -1279,7 +1279,10 @@ static gchar *GTKTranslate ( const gchar *path, gpointer func_data ) {
 
 static GtkWidget* firstChild(GtkWidget* widget)
 {
-	return g_list_nth_data(gtk_container_get_children(GTK_CONTAINER(widget)), 0);
+	GList *list = gtk_container_get_children(GTK_CONTAINER(widget));
+	GtkWidget *child = g_list_nth_data(list, 0);
+	g_list_free(list);
+	return child;
 }
 
 static void SetToolbarItemStyle(gpointer data, gpointer user_data)
@@ -1299,6 +1302,7 @@ static void SetToolbarItemStyle(gpointer data, gpointer user_data)
 	buttonParts = gtk_container_get_children(GTK_CONTAINER(buttonParent));
 	icon = g_list_nth_data(buttonParts, 0);
 	text = g_list_nth_data(buttonParts, 1);
+	g_list_free(buttonParts);
 
 	if (!icon || !text)
 		return;	/* Didn't find them */
